--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
       <img src="images/mountain.png" alt="mountain">
     </div>
+    <a target="_blank" onclick="window.open('https://yuva030701.github.io/Ts-FanPage/'); window.open('https://floating-crag-90965.herokuapp.com/');">Websites I created</a>
     <div class="middle-container">
       <div class="profile">
         <img class="Mypic" src="mypic.png" alt="Yuvaraj's pic">
